# mine_rust

./: Cargo.toml  README.md
assets/cubes/: debug.ron  grass.ron
src/: README.md  chunk.rs  cube.rs  error.rs  main.rs  player.rs  savefile.rs  tmp.rs  world.rs
src/cube/: shape_constructor.rs
src/player/: mod.rs  player_main.rs  readme.md
