[package]
name = "minerust"
version = "0.1.0"
authors = ["anna"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
macroquad = "^0.3"
rapier3d = {version="*", features=["serde-serialize"]}
sled = "^0"
ron = "^0.6"
rmp-serde = "^0.15"
serde = "^1"
thiserror = "^1.0"